Bug 249501 - Recently used applications does not honor Name format
Summary: Recently used applications does not honor Name format
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-kickoff (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 272339 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-30 13:34 UTC by Texstar
Modified: 2011-10-25 12:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Texstar 2010-08-30 13:34:17 UTC
Version:           4.5 (using Devel) 
OS:                Linux

When using Classic Menu and is set to Name only, the recently used applications list the applications by description.

 



Reproducible: Always
Comment 1 Christoph Feck 2010-08-30 13:49:27 UTC
Also seen in "Favorites" and "Leave" menu, and probably also all other (non application) menus.

Caused by the "KDE games" confusion commits, r1046898 and r1142273.
Comment 2 Giorgos Tsiapaliokas 2010-12-30 14:44:40 UTC
i can reproduce the bug.

my box's specifications are,

Qt: 4.7.1
KDE Development Platform: 4.5.4 (KDE 4.5.4)
os:gentoo ~amd64
Comment 3 Texstar 2011-05-10 16:11:56 UTC
Resolved in recent commit to kdeworkspace.
Comment 4 Christoph Feck 2011-05-10 16:27:59 UTC
Do you remember how recent? Because I can still reproduce on today's master.
Comment 5 Texstar 2011-05-10 16:34:15 UTC
I'm sorry wrong bug I was commented on. NEVERMIND. lol
Comment 6 Christoph Feck 2011-05-14 19:22:49 UTC
*** Bug 272339 has been marked as a duplicate of this bug. ***
Comment 7 Aaron J. Seigo 2011-10-25 12:38:07 UTC
Git commit 166ec9fa2e0b0764f21c637f32ec36a3e10b5647 by Aaron Seigo.
Committed on 25/10/2011 at 14:37.
Pushed by aseigo into branch 'KDE/4.7'.

fix name display

patch by Luc Menut
REVIEW:102820
BUG:249501

M  +24   -21   plasma/desktop/applets/kickoff/simpleapplet/menuview.cpp
M  +16   -5    plasma/desktop/applets/kickoff/simpleapplet/simpleapplet.cpp

http://commits.kde.org/kde-workspace/166ec9fa2e0b0764f21c637f32ec36a3e10b5647
Comment 8 Aaron J. Seigo 2011-10-25 12:38:12 UTC
Git commit 403e71ad862e74d03910248c9645e434b4123c6d by Aaron Seigo.
Committed on 25/10/2011 at 14:37.
Pushed by aseigo into branch 'master'.

fix name display

patch by Luc Menut
REVIEW:102820
BUG:249501

M  +24   -21   plasma/desktop/applets/kickoff/simpleapplet/menuview.cpp
M  +16   -5    plasma/desktop/applets/kickoff/simpleapplet/simpleapplet.cpp

http://commits.kde.org/kde-workspace/403e71ad862e74d03910248c9645e434b4123c6d