fix name display

patch by Luc Menut
REVIEW:102820
BUG:249501